--- a/index3.html
+++ b/index3.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Learn GitHub</title>
 </head>
 <body>
+	<h1>Learn GitHub</h1>
   <p>Still trying to get the hang of github</p>
 </body>
 </html>
