--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Learn GitHub</h1>
-  <p>Still trying to get the hang of github</p>
+  <p>Now I'm trying to get the hang of pull requests...</p>
 </body>
 </html>
